**0.4.1.1**

- Support for the weird **Then Else** construct (If A Then Else B)
- Fixed parsing bug for **Sub/Function definition** all on one line
- Fixed parsing bug for **Do/While** all on one line
- Fixed parsing of **date and time literals**
- Fixed parsing issue of **space between formal parameter list and object** reference
- Fixed parsing issue with comment on **#End If** line of directive

**0.4.1**

- Made available through **pip**
- Reworked the **line continuation** logic so should be much less succeptible to failing
- Fixed issue with **highlighting the incorrect error** line when the error was on a continuation line
- Fixed issue with **<> not being converted to !=** in comparison

**0.4.0.5**

- Added **Paste** button to quickly insert VB into the window
- Fixed parsing error if a **label named "Loop<someting>"** was present in a Do .. Loop
- Added detection for **Decimal** floats
- Fixed parsing error when Dim statement had spaces before "," (eg **Dim A , B**)
- Fixed parsing issue with **line continuation with a With** and the With variable was the first item on a line
- Fixed parsing of **Enum's with multiple items** per line
- Preserve **comments in Enums**
- Fixed **Enum auto-numbering** for Enums with some set and some unset values
- Fixed parsing issue with **continuation when the next line is blank**

**0.4.0.4**

- If **both property Let and Set** are present then choose the Set (new option to alter this to Let)
- Fixed parsing bug with space before brackets on a call: *A = Something ()*
- Fixed parsing bug with empty brackets on LHS of assignment: *A () = SomeFnReturningArray()*
- Fixed issue with **"submit file"** button not being displayed when parsing failed
- Fixed issue with **label just before the Next** from a For loop
- Fixed issue with **labels on Else, ElseIf, and Case** statements
- Fixed issue with **.variable** outside of a With block (this is a syntax error but would crash the converter)