@@ -2,6 +2,7 @@
   <dictionary name="paul">
     <words>
       <w>channelid</w>
+      <w>pythonic</w>
       <w>readtlb</w>
       <w>subelement</w>
       <w>twips</w>
