@@ -61,8 +61,8 @@ JustUseReturnStatement = No
 #@+node:Select
 
 [Select]
-# Once or EachTime, how many times to evaluate the case variable  
-EvaluateVariable = Once
+# Once, EachTime or Smart, how many times to evaluate the case variable
+EvaluateVariable = Smart
 # Name of select variable (only used if EvaluateVariable is Once)
 SelectVariablePrefix = _select
 # Yes or No, use numeric index on select variable (needed if you every have nested Selects and EvaluateVariable = Once)
