@@ -414,7 +414,8 @@
                                 Select variable
                             </label>
                             <select class="form-control col-sm-7" id="Cfg-Select-EvaluateVariable">
-                                <option selected value="Once">Create temp variable</option>
+                                <option selected value="Smart">Guess best approach</option>
+                                <option value="Once">Create temp variable</option>
                                 <option value="EachTime">Evaluate each time</option>
                             </select>
                         </div>
