@@ -1,5 +1,6 @@
 **0.4.1.1**
 
+- Implemented new "Smart" option for select variables. Tries to guess best approach.
 - Support for the weird **Then Else** construct (If A Then Else B)
 - Fixed parsing bug for **Sub/Function definition** all on one line
 - Fixed parsing bug for **Do/While** all on one line
